<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentActivity">

    <ListView
        android:id="@+id/pizza_list"
        android:layout_width="244dp"
        android:layout_height="149dp"
        android:layout_marginTop="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/currorder_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total"
        app:layout_constraintVertical_bias="0.121" />

    <EditText
        android:id="@+id/subtotal"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="124dp"
        android:autofillHints="subtotal"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:minHeight="48dp"
        android:text="@string/subtotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizza_list"
        tools:ignore="LabelFor"
        android:layout_marginRight="124dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/total_money"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/tax_money"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/subtotal_money"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toStartOf="@+id/subtotal"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizza_list" />

    <EditText
        android:id="@+id/tax"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="tax"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:minHeight="48dp"
        android:text="@string/tax"
        app:layout_constraintEnd_toEndOf="@+id/subtotal"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/subtotal"
        app:layout_constraintTop_toBottomOf="@+id/subtotal"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/total"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="total"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:text="@string/total"
        app:layout_constraintEnd_toEndOf="@+id/tax"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tax"
        app:layout_constraintTop_toBottomOf="@+id/tax"
        tools:ignore="LabelFor,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:autofillHints="phoneNumber"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:minHeight="48dp"
        android:text="@string/phoneNumber"
        app:layout_constraintBottom_toTopOf="@+id/pizza_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,TextFields" />
</androidx.constraintlayout.widget.ConstraintLayout>