<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="58dp"
        android:text="@string/total_money"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/orderTotal"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ordersTable"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="32dp" />

    <Spinner
        android:id="@+id/numbers"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ListView
        android:id="@+id/ordersTable"
        android:layout_width="361dp"
        android:layout_height="234dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/numbers"
        app:layout_constraintStart_toStartOf="@+id/numbers"
        app:layout_constraintTop_toBottomOf="@+id/numbers" />

    <EditText
        android:id="@+id/orderTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:autofillHints="orderTotal"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:minHeight="48dp"
        android:text="@string/orderTotal"
        app:layout_constraintEnd_toEndOf="@+id/ordersTable"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/ordersTable"
        app:layout_constraintTop_toBottomOf="@+id/ordersTable"
        tools:ignore="Deprecated,LabelFor" />
    <Button
        android:text="@string/cancel_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/cancel"
        app:layout_constraintTop_toBottomOf="@+id/orderTotal"
        app:layout_constraintStart_toStartOf="@+id/orderTotal" app:layout_constraintEnd_toEndOf="@+id/orderTotal"
        android:layout_marginTop="28dp" app:layout_constraintHorizontal_bias="0.496"/>
</androidx.constraintlayout.widget.ConstraintLayout>